About me short español structure

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>WANDERLUST</h3>
-                        <p>Plataforma desarrollada en 48 horas de idea a producto, la cual te permite crear pinboards con fotos y videos. Ganador de un reconocimiento por innovación en el reto Proyecto X de Laboratoria.</p>
+                        <p>Plataforma desarrollada en 48 horas, la cual te permite crear pinboards con fotos y videos. Ganador de un reconocimiento en Laboratoria.</p>
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
@@ -103,79 +103,44 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-3">
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
-                    </div>
-                    <div class="col-xs-12 col-md-9">
-                        <div class="about__short col-md-8">
-                            <h4><strong><em>Versión corta</em></strong></h4>
-                            <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.
-                                <br>
-                                <br>En los desplegables podrás ver algunas de las herramientas y lenguajes que he aprendido a manejar en los últimos 6 meses (enero-julio 2017).</p>
+                        <br>
+                        <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
+                            <i class="fa fa-chevron-down"></i>
+                            <span>Reconocimientos</span>
+                        </button>
+                        <div id="honors" class="skills-info collapse">
+                            <ul>
+                                <li>
+                                    <p>LA MÁS PROACTIVA</p>
+                                    <p><i>feb. 2017</i></p>
+                                </li>
+                                <li>
+                                    <p>MENCIÓN ESPECIAL POR INNOVACIÓN TECH</p>
+                                    <p><i>abr. 2017</i></p>
+                                </li>
+                                <li>
+                                    <p>JEDI MASTER</p>
+                                    <p><i>may. 2017</i></p>
+                                </li>
+                                <li>
+                                    <p>BEST SQUAD</p>
+                                    <p><i>may. 2017</i></p>
+                                </li>
+                                <li>
+                                    <p>BEST SQUAD</p>
+                                    <p><i>jul. 2017</i></p>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="about__short col-md-4">
-                            <div class="col-md-12">
-                                <button class="btn collapse-btn" data-toggle="collapse" data-target="#skill-set">
-                                    <i class="fa fa-chevron-down"></i>
-                                    <span>Skill set</span>
-                                </button>
-                                <div id="skill-set" class="skills-info collapse">
-                                    <ul>
-                                        <li>HTML5</li>
-                                        <li>CSS3</li>
-                                        <li>Materialize</li>
-                                        <li>Bootstrap</li>
-                                        <li>SASS</li>
-                                        <li>JavaScript (ECMAScript 6)</li>
-                                        <li>jQuery &amp; AJAX</li>
-                                        <li>npm (package manager)</li>
-                                        <li>HTTP JSON &amp; consumo de APIs</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <button class="btn collapse-btn" data-toggle="collapse" data-target="#tools">
-                                    <i class="fa fa-chevron-down"></i>
-                                    <span>Tools</span>
-                                </button>
-                                <div id="tools" class="skills-info collapse">
-                                    <ul>
-                                        <li>Brackets</li>
-                                        <li>Git</li>
-                                        <li>GitHub</li>
-                                        <li>Gulp</li>
-                                        <li>Heroku</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
-                                    <i class="fa fa-chevron-down"></i>
-                                    <span>Reconocimientos</span>
-                                </button>
-                                <div id="honors" class="skills-info collapse">
-                                    <ul>
-                                        <li>
-                                            <p>LA MÁS PROACTIVA</p>
-                                            <p><i>feb. 2017</i></p>
-                                        </li>
-                                        <li>
-                                            <p>MENCIÓN ESPECIAL POR INNOVACIÓN TECH</p>
-                                            <p><i>abr. 2017</i></p>
-                                        </li>
-                                        <li>
-                                            <p>JEDI MASTER</p>
-                                            <p><i>may. 2017</i></p>
-                                        </li>
-                                        <li>
-                                            <p>BEST SQUAD</p>
-                                            <p><i>may. 2017</i></p>
-                                        </li>
-                                        <li>
-                                            <p>BEST SQUAD</p>
-                                            <p><i>jul. 2017</i></p>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="about__short col-md-9">
+                        <div class="col-md-12">
+                            <h4><strong><em>Versión corta</em></strong></h4>
+                            <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.</p>
+                            <p>En la actualidad busco ser parte de un equipo de emprendedores impulsados por una cultura de diseño y metodologías ágiles para poder amoldarme a nuevos estándares de trabajo.</p>
+                            <br>
+                            <p><strong>Skill set:</strong> HTML5, CSS3, Materialize, Bootstrap, SASS, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), HTTP JSON &amp; consumo de APIs.</p>
+                            <p><strong>Tools:</strong> Brackets, Git, GitHub, Gulp, Heroku.</p>
                         </div>
                     </div>
                 </div>
