about me mobile

--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,12 @@
                     </div>
                     <p class="hidden-xs">FRONT - END DEVELOPER, LIMA - PERÚ</p>
                     <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia-j-flores_resume.pdf">
-                        <button class="btn home__button animate-flicker" type="submit">Descargar CV</button>
+                        <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
+                    <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
+                        <i class="fa fa-angle-double-down"></i>
+                        <p>VER MÁS</p>
+                    </div>
                 </div>
             </section>
         </header>
@@ -135,19 +139,27 @@
                     </div>
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
-                            <h4><strong><em>Versión corta</em></strong></h4>
-                            <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.</p>
-                            <p>En la actualidad busco ser parte de un equipo de emprendedores impulsados por una cultura de diseño y metodologías ágiles para poder amoldarme a nuevos estándares de trabajo.</p>
-                            <br>
-                            <p><strong>Skill set:</strong> HTML5, CSS3, Materialize, Bootstrap, SASS, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), HTTP JSON &amp; consumo de APIs.</p>
-                            <p><strong>Tools:</strong> Brackets, Git, GitHub, Gulp, Heroku.</p>
+                            <div class="col-md-12">
+                                <h4><strong><em>Versión corta</em></strong></h4>
+                            </div>
+                            <div class="col-md-7">
+                                <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.</p>
+                                <p>En la actualidad busco ser parte de un equipo de emprendedores impulsados por una cultura de diseño y metodologías ágiles para poder amoldarme a nuevos estándares de trabajo.</p>
+                            </div>
+                            <div class="col-md-5">
+                                <h5><strong>SKILL SET</strong></h5>
+                                <p>HTML5, CSS3, Materialize, Bootstrap, SASS, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), HTTP JSON &amp; consumo de APIs.</p>
+                                <h5><strong>TOOLS</strong></h5>
+                                <p>Brackets, Git, GitHub, Gulp, Heroku.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <hr>
                 <div class="row">
                     <div class="about__long col-md-12">
-                        <h4><strong><em>Versión larga</em></strong> <a href="#interests" class="skip">(Saltar)</a></h4>
+                        <h4><strong><em>Versión larga</em></strong> 
+                        <a href="#interests" class="skip"><i class="fa fa-arrow-right"></i> (Saltar)</a></h4>
                         <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
                         <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las <strong>causas sociales</strong> despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
                         <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles para poder adaptarme a nuevos estándares de trabajo. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo y sé que tengo un largo camino por recorrer.</p>
