--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,8 @@
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>WANDERLUST</h3>
-                        <p>Plataforma desarrollada en 48 horas, la cual te permite crear pinboards con fotos y videos. Ganador de un reconocimiento en Laboratoria.</p>
-                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                        <p>Plataforma desarrollada en 48 horas, la cual te permite crear pinboards con fotos y videos. Ganadora de un reconocimiento en Laboratoria.</p>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#wandelust-modal">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
                         <h3>PINTEREST</h3>
@@ -101,6 +101,72 @@
                 </div>
             </div>
         </section>
+        <div class="modal fade" id="wandelust-modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container">
+                        <div class="modal-header row">
+                            <div class="col-md-12">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">WANDERLUST</h3>
+                            </div>
+                        </div>
+                        <div class="modal-body row">
+                            <div class="col-md-4 col-xs-12">
+                                <h4>Cliente</h4>
+                                <p>Laboratoria</p>
+                                <h4>Mi función</h4>
+                                <p>Crear el concepto y diseño de la plataforma. Desarrollar la página de ingreso de usuario y refactorizar código de JS.</p>
+                                <h4>Tecnologías</h4>
+                                <ul>
+                                    <li>Vanilla JavaScript</li>
+                                    <li>CSS3</li>
+                                    <li>HTML5</li>
+                                </ul>
+                                <h4>Reconocimientos</h4>
+                                <p>Mención especial por innovación tech en Laboratoria.</p>
+                            </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="col-md-12">
+                                    <p>Crear un proyecto en 48 horas utilizando eventos de JavaScript.</p>
+                                    <p>Requerimientos:</p>
+                                    <ol>
+                                        <li>Aplicar dos eventos vistos en clase</li>
+                                        <li>Aplicar dos eventos nuevos</li>
+                                        <li>Usar callbacks</li>
+                                    </ol>
+                                </div>
+                                <div class="col-md-12">
+                                    <h4>PROCESO</h4>
+                                    <h5>01. Organización</h5>
+                                    <p>Este fue un proyecto desarrollado en parejas así que para poder cumplir con la meta final mantener una buena organización fue clave. Nos indicamos tareas de acuerdo a nuestro nivel de agilidad para ir así trabajando a la par sin perder un minuto de nuestro tiempo. Utilizamos Trello para tener en orden las tareas a trabajar y nos pusimos tiempos para poder revisar y hacer sugerencias a nuestro avance.</p>
+                                    <h5>02. Investigación</h5>
+                                    <p>Generé esta propuesta debido a mi búsqueda por una red social que se enfoque en compartir experiencias de viajeros en línea. Hice un boceto inicial en lápiz y papel en base a la estructura que tenía en mente y así pudimos darle inicio al proceso de desarrollo.</p>
+                                    <h5>03. Desarrollo</h5>
+                                    <p>Los dos eventos vistos en clase que aplicamos fueron:</p>
+                                    <ol>
+                                        <li>OnmouseOver: se produce cuando el puntero del mouse se mueve a través de la barra de navegación, haciendo una transición de color y tamaño en el elemento sujeto al evento.</li>
+                                        <li>OnmouseOut: Este evento se produce cuando el puntero del mouse se mueve fuera del área de uno de los elementos de la barra de navegación, alterando el estilo de borde y color de fondo.</li>
+                                    </ol>
+                                    <p>Los eventos no vistos en clase utilizados en el proyecto fueron:</p>
+                                    <ol>
+                                        <li>OnmouseMove: El evento se produce cuando el puntero del mouse se mueve cerca a las coordenadas del menu desplegable ubicado a la derecha del homepage. Al ocurrir el evento el menu se despliega y muestra las opciones de los lugares en tendencia para road trips en Wanderlust.</li>
+                                        <li>DragOver: El evento de extracción se produce en la sección del pinboard, puedes seleccionar un archivo mp4 o una imagen y arrastrar el elemento hacia el contenedor.</li>
+                                        <li>Drop: El evento sucede cuando los datos arrastrados desde tu ordenador son soltados en el contenedor armando así poco a poco tu pinboard.</li>
+                                    </ol>
+                                    <strong><p class="text-center">Para ingresar a la plataforma usar el correo itsandromeda@gmail.com y contraseña 321</p></strong>
+
+                                </div>
+                                <div class="col-md-12 modal__btns">
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Wanderlust-Proyecto-X" target="_blank">Código</a>
+                                    <a class="modal-btn" href="https://itsandromeda.github.io/Wanderlust-Proyecto-X/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section id="about">
             <div class="container-fluid">
                 <h2>SOBRE MÍ</h2>
@@ -148,7 +214,7 @@
                             </div>
                             <div class="col-md-5">
                                 <h5><strong>SKILL SET</strong></h5>
-                                <p>HTML5, CSS3, Materialize, Bootstrap, SASS, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), HTTP JSON &amp; consumo de APIs.</p>
+                                <p>HTML5, CSS3, Materialize, Bootstrap, SASS, BEM, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), SEO, HTTP JSON &amp; consumo de APIs.</p>
                                 <h5><strong>TOOLS</strong></h5>
                                 <p>Brackets, Git, GitHub, Gulp, Heroku.</p>
                             </div>
@@ -158,8 +224,9 @@
                 <hr>
                 <div class="row">
                     <div class="about__long col-md-12">
-                        <h4><strong><em>Versión larga</em></strong> 
+                        <h4><strong><em>Versión larga</em></strong>
                         <a href="#interests" class="skip"><i class="fa fa-arrow-right"></i> (Saltar)</a></h4>
+                        <img class="img-right" src="img/omfg.jpg" alt="Annia haciendo pedidos para OMFG! Accesorios">
                         <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
                         <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las <strong>causas sociales</strong> despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
                         <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles para poder adaptarme a nuevos estándares de trabajo. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo y sé que tengo un largo camino por recorrer.</p>
@@ -195,6 +262,9 @@
                 <button class="btn home__button" type="submit">Descarga mi CV</button>
                 <i class="fa fa-long-arrow-up animate-flicker"></i>
             </form>
+            <div>
+                <p>Para ver el repositorio de este portafolio puedes hacer click <a href="https://github.com/itsandromeda/Portfolio" target="_blank">aquí</a>.</p>
+            </div>
         </div>
     </div>
     <footer class="footer">
