--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
                         <h3>PINTEREST</h3>
-                        <p>Recreación de la plataforma original (responsive) trayendo datos del API de la misma.</p>
+                        <p>Recreación de la plataforma original trayendo datos del API de la misma.</p>
                         <button type="button" class="btn" data-toggle="modal" data-target="#pinterest-modal">jQuery, Pinterest API, GULP &amp; SASS</button>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="small-grid__box--light col-xs-12 col-md-6">
                         <h3>TRELLO</h3>
                         <p>Réplica de la web original que te permite organizar proyectos en boards, listas y tarjetas. Me hizo ganadora de un reconocimiento en Laboratoria.</p>
-                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#trello-modal">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>THIS IS NEAT</h3>
@@ -215,6 +215,49 @@
                                 <div class="col-md-12 modal__btns">
                                     <a class="modal-btn" href="https://github.com/itsandromeda/Pinterest" target="_blank">Código</a>
                                     <a class="modal-btn" href="https://pinterest-laboratoria.herokuapp.com/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="trello-modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container">
+                        <div class="modal-header row">
+                            <div class="col-md-12">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">TRELLO</h3>
+                            </div>
+                        </div>
+                        <div class="modal-body row">
+                            <div class="col-md-4 col-xs-12">
+                                <h4>Cliente</h4>
+                                <p>Laboratoria</p>
+                                <h4>Mi función</h4>
+                                <p>Recrear la plataforma Trello.</p>
+                                <h4>Tecnologías</h4>
+                                <ul>
+                                    <li>Vanilla JavaScript</li>
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                </ul>
+                                <h4>Reconocimientos</h4>
+                                <p>El badge "La más proactiva" en el sprint 2 del bootcamp de Laboratoria.</p>
+                            </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="col-md-12">
+                                    <p>El trabajo original era recrear una especie de Trello exclusivamente con JavaScript, no era requisito usar HTML o CSS ya que esos temas nos enseñarían poseriormente en otros sprints.</p>
+                                </div>
+                                <div class="col-md-12">
+                                    <h4>PROCESO</h4>
+                                    <p>Investigué sobre HTML y CSS lo suficiente para poder desarrollar una réplica de Trello y darle funcionalidad a los elementos con JavaScript. La réplica que desarrollé te permite agregar listas en el board creado por default. Fue el primer proyecto de maquetado que hice en el bootcamp y recibí un reconocimiento por mi proactividad.</p>
+                                </div>
+                                <div class="col-md-12 modal__btns">
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Trello-Clone" target="_blank">Código</a>
+                                    <a class="modal-btn" href="https://itsandromeda.github.io/Trello-Clone/" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
