neat link update

--- a/public/index.html
+++ b/public/index.html
@@ -298,8 +298,8 @@
                                     <p>Hice que el posicionamiento de varios elementos cambiara de acuerdo al tamaño de la pantalla con clases de Bootstrap. Utilicé JavaScript para que el contenido de la página suba al momento de cerrar a barra de promoción.</p>
                                 </div>
                                 <div class="col-md-12 modal__btns">
-                                    <a class="modal-btn" href="https://github.com/itsandromeda/Trello-Clone" target="_blank">Código</a>
-                                    <a class="modal-btn" href="https://itsandromeda.github.io/Trello-Clone/" target="_blank">Demo</a>
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/This-is-Neat" target="_blank">Código</a>
+                                    <a class="modal-btn" href="https://itsandromeda.github.io/This-is-Neat/" target="_blank">Demo</a>
                                 </div>
                             </div>
                         </div>
