--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -112,25 +112,25 @@
                         <br>
                         <button class="btn collapse-btn" data-toggle="collapse" data-target="#honors">
                             <i class="fa fa-chevron-right"></i>
-                            <span>Reconocimientos</span>
+                            <span>Acknowledgements</span>
                         </button>
                         <div id="honors" class="skills-info collapse">
                             <ul>
                                 <li>
-                                    <p>LA MÁS PROACTIVA</p>
+                                    <p>MOST PROACTIVA</p>
                                     <p><i>feb. 2017</i></p>
                                 </li>
                                 <li>
-                                    <p>MENCIÓN ESPECIAL POR INNOVACIÓN TECH</p>
+                                    <p>SPECIAL MENTION FOR TECH INNOVATION</p>
                                     <p><i>abr. 2017</i></p>
                                 </li>
                                 <li>
                                     <p>JEDI MASTER</p>
-                                    <p><i>may. 2017</i></p>
+                                    <p><i>may 2017</i></p>
                                 </li>
                                 <li>
                                     <p>BEST SQUAD</p>
-                                    <p><i>may. 2017</i></p>
+                                    <p><i>may 2017</i></p>
                                 </li>
                                 <li>
                                     <p>BEST SQUAD</p>
@@ -139,48 +139,49 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-md-9">
-                        <div class="about__short col-md-9">
+                    <div class="about__short col-md-9">
+                        <div class="col-md-12">
                             <div class="col-md-12">
-                                <div class="col-md-12">
-                                    <h4><strong><em>TLTR version</em></strong></h4>
-                                </div>
-                                <div class="col-md-7">
-                                    <p>¡Hi! My name is Annia, I'm a <em>front-end developer</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate, currently living in Lima, Peru. I'm interested in <strong>social issues</strong>, <strong>entrepreneurship</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>design</strong>, <strong>UX</strong>, <strong>branding</strong>, <strong>good practices</strong> in everything I do (amongst other things) &amp; <strong>spanish</strong> is my first language.
-                                        <br>
-                                        <br>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new working standards.</p>
-                                </div>
-                                <div class="col-md-5">
-                                    <h5><strong>SKILL SET</strong></h5>
-                                    <p>HTML5, CSS3, Materialize, Bootstrap, SASS, BEM, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), SEO, HTTP JSON &amp; consumo de APIs.</p>
-                                    <h5><strong>TOOLS</strong></h5>
-                                    <p>Brackets, Git, GitHub, Gulp, Heroku.</p>
-                                </div>
+                                <h4><strong><em>TLTR version</em></strong></h4>
+                            </div>
+                            <div class="col-md-7">
+                                <p>¡Hello! My name is Annia, I'm a <em>front-end developer</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate, currently living in Lima, Peru. I'm interested in <strong>social issues</strong>, <strong>entrepreneurship</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>design</strong>, <strong>UX</strong>, <strong>branding</strong>, <strong>good practices</strong> in everything I do (amongst other things) &amp; <strong>spanish</strong> is my first language.
+                                    <br>
+                                    <br>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new working standards.</p>
+                            </div>
+                            <div class="col-md-5">
+                                <h5><strong>SKILL SET</strong></h5>
+                                <p>HTML5, CSS3, Materialize, Bootstrap, SASS, BEM, JavaScript (ECMAScript 6), jQuery &amp; AJAX, npm (package manager), SEO, HTTP JSON &amp; API requests.</p>
+                                <h5><strong>TOOLS</strong></h5>
+                                <p>Brackets, Git, GitHub, Gulp, Heroku.</p>
                             </div>
                         </div>
                     </div>
-                    <hr>
-                    <div class="row">
-                        <div class="about__long col-md-12">
-                            <h4><strong><em>Long version</em></strong> <a href="#interests" class="skip">(Skip)</a></h4>
-                            <p>My first job was when I was 19 when I <strong>decided</strong> to turn my hobby into a small business and I opened up an online handmade jewelry shop on Facebook having in mind that I was going to learn a lot about e-commerce to some extent. It was an amazing learning experience where I developed a strong interest on <strong>entrepreneurship</strong>, <strong>branding</strong> and the way my customers experienced the shopping process, (<strong>UX</strong> got a lot of my attention once I discovered it too later on). The project helped me develop my <strong>organization</strong>, <strong>planning</strong>, <strong>detail oriented</strong> and <strong>photography skills</strong>.</p>
-                            <p>I've learnt many things by myself, one of them was <strong>this language</strong>, I started speaking english quite fluently since I was about 14. My interest on <strong>social issues</strong> came up right after that, since learning the language opened up a whole new world of information to my eyes and I had access to lots of new things. Before I got into Laboratoria I started another entrepreneurship adventure, but this time I wanted to focus on social issues that were close to my heart such as <strong>environmental pollution</strong>, <strong>sustainability</strong> y <strong>cruelty-free products</strong>.</p>
-                            <p>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new working standards. One of my long term life goals is to create things that generate new oportunities for other people and things that solve real world problems, I've got a long way to go.</p>
-                            <p>I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to; it's basically my motto and it definitely helped me along the way while attending Laboratoria where I learned a lot of things from scratch while humbly getting a few acknowledgements from the program.</p>
-                        </div>
-                    </div>
-                    <div id="interests" class="row">
-                        <div class="col-md-12">
-                            <h3>Interests</h3>
-                            <p>I'm quite interested on e-learning, front-end frameworks to get a quicker work pace and also about the best practices on the field; effective social media management, design and personal growth are other things that catch my interest.</p>
-                            <p>I'm really into music and photography as well and one of the platforms I use to share some of my other hobbies is Instagram.</p>
-                        </div>
-                        <div class="insta-feed col-md-12">
-                            <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                            <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
-                        </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="about__long col-md-12">
+                        <h4><strong><em>Long version</em></strong>
+                            <a href="#interests" class="skip"><i class="fa fa-arrow-right"></i> (Skip)</a></h4>
+                        <img class="img-right" src="img/omfg.jpg" alt="Annia making OMFG! Accesories">
+                        <p>My first job was when I was 19 when I <strong>decided</strong> to turn my hobby into a small business and I opened up an online handmade jewelry shop on Facebook having in mind that I was going to learn a lot about e-commerce to some extent. It was an amazing learning experience where I developed a strong interest on <strong>entrepreneurship</strong>, <strong>branding</strong> and the way my customers experienced the shopping process, (<strong>UX</strong> got a lot of my attention once I discovered it too later on). The project helped me develop my <strong>organization</strong>, <strong>planning</strong>, <strong>detail oriented</strong> and <strong>photography skills</strong>.</p>
+                        <p>I've learnt many things by myself, one of them was <strong>this language</strong>, I started speaking english quite fluently since I was about 14. My interest on <strong>social issues</strong> came up right after that, since learning the language opened up a whole new world of information to my eyes and I had access to lots of new things. Before I got into Laboratoria I started another entrepreneurship adventure, but this time I wanted to focus on social issues that were close to my heart such as <strong>environmental pollution</strong>, <strong>sustainability</strong> and <strong>cruelty-free products</strong>.</p>
+                        <p>I'm currently looking to become a part of a design-driven organization, I'd like to work closely with agile methodologies and adapt to new working standards. One of my long term life goals is to create things that generate new oportunities for other people and things that solve real world problems, I've got a long way to go.</p>
+                        <p>I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to; it's basically my motto and it definitely helped me along the way while attending Laboratoria where I learned a lot of things from scratch while humbly getting a few acknowledgements from the program.</p>
                     </div>
                 </div>
+                <div id="interests" class="row">
+                    <div class="col-md-12">
+                        <h3>Interests</h3>
+                        <p>I'm quite interested in e-learning, front-end frameworks for a quicker work pace and learning the best practices in the field; effective social media management, design and personal growth are other things that catch my interest.</p>
+                        <p>I'm really into music and photography as well and one of the platforms I use to share some of my other hobbies is Instagram.</p>
+                    </div>
+                    <div class="insta-feed col-md-12">
+                        <script src="https://snapwidget.com/js/snapwidget.js"></script>
+                        <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+                    </div>
+                </div>
+            </div>
         </section>
         <header class="header-bot hidden-xs">
             <section class="container-fluid parallax-section text-center">
@@ -202,35 +203,35 @@
                 <p>You can see my portfolio's repository and check out the code right <a href="https://github.com/itsandromeda/Portfolio" target="_blank">here</a>.</p>
             </div>
         </div>
-        </div>
-        <footer class="footer">
-            <div class="container-fluid">
-                <ul>
-                    <li>
-                        <a href="https://github.com/itsandromeda" target="_blank">
-                            <i class="fa fa-github"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/itsandromeda/" target="_blank">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://codepen.io/ItsAndromeda/" target="_blank">
-                            <i class="fa fa-codepen"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/anniajflores/" target="_blank">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
-                    </li>
-                </ul>
-                <a href="#" class="top footer-text">Go up</a>
-                <span class="hidden-xs">ANNIA J.FLORES - 2017</span>
-            </div>
     </div>
+    <footer class="footer">
+        <div class="container-fluid">
+            <ul>
+                <li>
+                    <a href="https://github.com/itsandromeda" target="_blank">
+                        <i class="fa fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/itsandromeda/" target="_blank">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://codepen.io/ItsAndromeda/" target="_blank">
+                        <i class="fa fa-codepen"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/anniajflores/" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+            <a href="#" class="top footer-text">Go up</a>
+            <span class="hidden-xs">ANNIA J.FLORES - 2017</span>
+        </div>
+        </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
